--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
+    "postman": "^0.2.0",
     "require": "^2.4.20"
   }
 }
