--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-sanitizer": "^1.0.6",
     "fs": "^0.0.1-security",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
@@ -23,6 +24,6 @@
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "postman": "^0.2.0",
-    "require": "^2.4.20"
+    "require": "^0.4.4"
   }
 }
